Changed MainWindow and report generation so that they take Job::paymentDate into account

--- a/resources/html/report_template.html
+++ b/resources/html/report_template.html
@@ -131,7 +131,7 @@
   <h3>Jobs</h3>
   <table>
     <tr>
-      <th style="width: 130px">Date</th>
+      <th style="width: 130px">Payment Date</th>
       <th style="width: 130px">Payer</th>
       <th style="width: 130px">Payment Method</th>
       <th style="width: 130px">Net amount</th>
