--- a/resources/html/invoice_receipt_template.html
+++ b/resources/html/invoice_receipt_template.html
@@ -44,6 +44,11 @@
     <td class="tbl-l">GAS SAFE REGISTRATION NO.:</td>
     <td><strong>305566</strong></td>
   </tr>
+  <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
+  <tr>
+    <td class="tbl-l">INVOICE NO.:</td>
+    <td><strong><$ invoice-number $></strong></td>
+  </tr>
 </table>
 
 <div>
